refactor : replace guava ImmutableMap by Map in RequestTest Fixes #1353